--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -8,12 +8,12 @@ Tags: one-page, single-page, portfolio, custom-colors, post-formats, responsive,
 */
 /*=== MEDIA QUERY ===*/
 html {
-  background-color: #353b43;
+  background-color: #3c3836;
   color: #737f8a;
 }
 
 body {
-  background-color: #353b43;
+  background-color: #3c3836;
   font-family: "Anaheim", sans-serif;
   color: #737f8a;
   -webkit-font-smoothing: antialiased;
@@ -48,12 +48,12 @@ pre {
 ::-moz-selection {
   /* Code for Firefox */
   color: #fff;
-  background: #57cbcc;
+  background: #458588;
 }
 
 ::selection {
   color: #fff;
-  background: #57cbcc;
+  background: #458588;
 }
 
 hr {
@@ -115,7 +115,7 @@ a:hover {
 
 .btn-transparent:hover,
 .btn-transparent:focus {
-  background-color: #57cbcc;
+  background-color: #458588;
   border: 1px solid transparent;
   color: #fff;
 }
@@ -137,7 +137,7 @@ a:hover {
   position: absolute;
   top: -4px;
   width: 50px;
-  background-color: #57cbcc;
+  background-color: #458588;
 }
 
 .color {
@@ -163,7 +163,7 @@ a:hover {
 }
 
 .bg-one {
-  background-color: #353b43;
+  background-color: #3c3836;
 }
 
 .bg-dark {
@@ -215,11 +215,11 @@ a:hover {
 
 a:focus,
 a:hover {
-  color: #57cbcc;
+  color: #458588;
 }
 
 .btn-main {
-  background: #57cbcc;
+  background: #458588;
   color: #fff;
   display: inline-block;
   font-size: 14px;
@@ -307,7 +307,7 @@ a:hover {
 }
 
 .title h2 span {
-  color: #57cbcc;
+  color: #458588;
 }
 
 .title p {
@@ -352,7 +352,7 @@ a:hover {
 }
 
 .header-bradcrumb a:hover {
-  color: #57cbcc;
+  color: #458588;
 }
 
 .slick-slide {
@@ -416,7 +416,7 @@ a:hover {
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show>.nav-link {
-  color: #57cbcc;
+  color: #458588;
 }
 
 .navbar-toggler:focus {
@@ -460,7 +460,7 @@ a:hover {
 
 .hero-area .block .video-button {
   background: #fff;
-  color: #57cbcc;
+  color: #458588;
   display: inline-block;
   height: 60px;
   width: 60px;
@@ -475,7 +475,7 @@ a:hover {
 
 .hero-area .block h1 {
   font-size: 90px;
-  color: #fff;
+  color: #98971a;
   text-transform: capitalize;
   font-weight: 700;
   margin-bottom: 20px;
@@ -488,8 +488,8 @@ a:hover {
 }
 
 .hero-area .block p {
-  color: #fff;
-  font-size: 20px;
+  color: #d79921;
+  font-size: 2em;
   width: 70%;
   margin: 0 auto;
 }
@@ -555,7 +555,7 @@ a:hover {
 }
 
 .about .block:hover {
-  border-bottom: 2px solid #57cbcc;
+  border-bottom: 2px solid #458588;
 }
 
 .about .block:hover .icon-box {
@@ -627,7 +627,7 @@ a:hover {
 
 .about-2 .content-block .media i {
   font-size: 30px;
-  color: #57cbcc;
+  color: #458588;
 }
 
 .about-2 .content-block .media h4 {
@@ -707,12 +707,12 @@ a:hover {
 
 .form-meghna input:hover,
 .form-meghna textarea:hover {
-  border-color: #57cbcc;
+  border-color: #458588;
 }
 
 #contact-submit {
   border: 1px solid rgba(236, 239, 241, 0.07);
-  background: #57cbcc;
+  background: #458588;
   padding: 12px 0;
   width: 100%;
   margin: 0;
@@ -809,7 +809,7 @@ a:hover {
 }
 
 .price-title h3 {
-  color: #57cbcc;
+  color: #458588;
   margin: 0 0 10px;
   text-transform: uppercase;
 }
@@ -820,7 +820,7 @@ a:hover {
 }
 
 .price-title .value {
-  color: #57cbcc;
+  color: #458588;
   font-size: 30px;
 }
 
@@ -870,7 +870,7 @@ a:hover {
 }
 
 .portfolio-filter .btn.active {
-  border-color: #57cbcc;
+  border-color: #458588;
 }
 
 .portfolio-block {
@@ -929,7 +929,7 @@ a:hover {
 }
 
 .portfolio-block .caption .search-icon {
-  background: #57cbcc;
+  background: #458588;
   width: 50px;
   height: 50px;
   color: #fff;
@@ -975,13 +975,13 @@ a:hover {
 
 .service-2 .service-item:hover i {
   background: #fff;
-  color: #57cbcc;
+  color: #458588;
 }
 
 .service-2 .service-item i {
   font-size: 30px;
   display: inline-block;
-  background: #57cbcc none repeat scroll 0 0;
+  background: #458588 none repeat scroll 0 0;
   border-radius: 30px;
   box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.1);
   color: #fff;
@@ -1014,7 +1014,7 @@ a:hover {
 }
 
 .skill-bar .progress .progress-bar {
-  background: #57cbcc;
+  background: #458588;
 }
 
 /*=================================================================
@@ -1060,7 +1060,7 @@ a:hover {
 }
 
 .member-photo .mask {
-  background-color: rgba(87, 203, 204, 0.7);
+  background-color: rgba(69, 133, 136, 0.7);
   position: absolute;
   text-align: center;
   height: 100%;
@@ -1093,7 +1093,7 @@ a:hover {
 
 .member-photo .mask ul li a:hover {
   background-color: #fff;
-  color: #57cbcc;
+  color: #458588;
   border: 1px solid transparent;
 }
 
@@ -1174,7 +1174,7 @@ a:hover {
 
 .owl-controls .owl-page.active span,
 .owl-controls .owl-page:hover span {
-  background-color: #57cbcc;
+  background-color: #458588;
   border: 2px solid transparent;
 }
 
@@ -1268,7 +1268,7 @@ a:hover {
 }
 
 .post-meta a {
-  color: #57cbcc;
+  color: #458588;
 }
 
 .post-meta>span {
@@ -1329,7 +1329,7 @@ a:hover {
 }
 
 .next-prev a:hover {
-  color: #57cbcc;
+  color: #458588;
 }
 
 .next-prev .prev-post i {
@@ -1352,7 +1352,7 @@ a:hover {
 }
 
 .social-profile ul li a i:hover {
-  color: #57cbcc;
+  color: #458588;
 }
 
 .comments-section {
@@ -1400,7 +1400,7 @@ a:hover {
 }
 
 .comment-wrap .media .media-heading a {
-  color: #57cbcc;
+  color: #458588;
   font-size: 13px;
 }
 
@@ -1427,7 +1427,7 @@ a:hover {
 .comment-reply-form input:focus,
 .comment-reply-form textarea:focus {
   box-shadow: none;
-  border: 1px solid #57cbcc;
+  border: 1px solid #458588;
 }
 
 .comment-reply-form textarea,
@@ -1529,7 +1529,7 @@ input#e-mail,
 }
 
 .social-icon ul li a:hover {
-  background: #57cbcc;
+  background: #458588;
 }
 
 .social-icon ul li a:hover i {
@@ -1572,8 +1572,8 @@ input#e-mail,
 }
 
 #scrollUp:hover {
-  background-color: #57cbcc;
-  border: 1px solid #57cbcc;
+  background-color: #458588;
+  border: 1px solid #458588;
 }
 
 /*=================================================================
@@ -1999,7 +1999,7 @@ blockquote {
 }
 
 .form-control-meghna .form-control:focus {
-  border-color: #57cbcc;
+  border-color: #458588;
   box-shadow: 0 0 0 0.2rem rgba(0, 174, 255, 0.432);
 }
 
@@ -2253,8 +2253,8 @@ figcaption {
 }
 
 .pagination .page-item .page-link:hover {
-  background: #57cbcc;
-  border-color: #57cbcc;
+  background: #458588;
+  border-color: #458588;
   color: #fff
 }
 
@@ -2264,13 +2264,13 @@ figcaption {
 }
 
 .pagination .page-item.active .page-link {
-  background: #57cbcc;
+  background: #458588;
   color: #fff;
-  border-color: #57cbcc;
+  border-color: #458588;
 }
 
 #select-language {
-  background: #353b43;
+  background: #3c3836;
   color: #ffffff;
   border: 0;
 }
