--- a/themes/meghna-hugo/layouts/partials/head.html
+++ b/themes/meghna-hugo/layouts/partials/head.html
@@ -15,7 +15,7 @@
 	{{ end }}
 
 	{{"<!-- Main Stylesheet -->"|safeHTML}}
-	{{ $styles := resources.Get "css/style.css" | minify }}
+	{{ $styles := resources.Get "css/style.css" }}
 	<link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
 
 	{{"<!-- Custom stylesheet - for your changes -->" |safeHTML}}
