--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -410,6 +410,7 @@ a:hover {
   background-color: #1d2024;
   width: 100%;
   margin-bottom: 0;
+  font-size: 1.2em;
 }
 
 .navbar-dark .navbar-nav .active>.nav-link,
@@ -961,6 +962,7 @@ a:hover {
   border-top: 1px solid rgba(236, 239, 241, 0.07);
   margin-bottom: 40px;
   box-shadow: 2px 2px 5px rgba(44, 44, 44, 0.3), 13px 13px 0 rgba(255, 255, 255, 0.7);
+  min-height: 375px;
 }
 
 .service-block .service-icon {
@@ -1033,6 +1035,7 @@ a:hover {
 .team-member {
   background-color: #292F36;
   margin-bottom: 10px;
+  min-height: 500px;
 }
 
 .team-member:hover .mask {
