About us underline color; remove social icons; copyright

--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -556,7 +556,7 @@ a:hover {
 }
 
 .about .block:hover {
-  border-bottom: 2px solid #458588;
+  border-bottom: 2px solid #d79921;
 }
 
 .about .block:hover .icon-box {
