deploy: b950189359aa162dbfece8c128c08348b76af4dc

--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,7 @@ a:hover {
 .hero-area .block p {
   color: #d79921;
   font-size: 2em;
-  width: 70%;
+  width: 65%;
   margin: 0 auto;
 }
 
@@ -556,7 +556,7 @@ a:hover {
 }
 
 .about .block:hover {
-  border-bottom: 2px solid #458588;
+  border-bottom: 2px solid #d79921;
 }
 
 .about .block:hover .icon-box {
