--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -549,6 +549,7 @@ a:hover {
 ==================================================================*/
 .about .block {
   background: #242930;
+  min-height: 425px;
   padding: 30px;
   border-bottom: 2px solid transparent;
   transition: .5s all;
