--- a/themes/meghna-hugo/layouts/partials/team.html
+++ b/themes/meghna-hugo/layouts/partials/team.html
@@ -36,7 +36,7 @@
 
           {{"<!-- member name & designation -->" | safeHTML}}
           <div class="member-meta">
-            <h4>{{ .name }}</h4>
+            <a href="{{ .urlslug | absURL }}"><h4>{{ .name }}</h4></a>
             <span>{{ .designation | markdownify}}</span>
             <p>{{ .content | markdownify }}</p>
           </div>
