--- a/themes/meghna-hugo/layouts/partials/contact.html
+++ b/themes/meghna-hugo/layouts/partials/contact.html
@@ -26,7 +26,7 @@
 					{{ range .contact_list }}
 					<div class="con-info clearfix">
 						<i class="{{ .icon }}"></i>
-						<span>{{ .info }}</span>
+						<a href="{{ .link | safeURL }}"><span>{{ .info }}</span></a>
 					</div>
 					{{ end }}
 				</div>
