--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -1061,6 +1061,9 @@ a:hover {
 .member-photo:hover img {
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+  filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
 }
 
 .member-photo img {
@@ -1074,7 +1077,7 @@ a:hover {
 }
 
 .member-photo .mask {
-  background-color: rgba(69, 133, 136, 0.7);
+  background-color: rgba(69, 133, 136, 0.5);
   position: absolute;
   text-align: center;
   height: 100%;
