--- a/themes/meghna-hugo/layouts/partials/service.html
+++ b/themes/meghna-hugo/layouts/partials/service.html
@@ -19,7 +19,7 @@
 			{{ range .service_item}}
 			{{"<!-- Single Service Item -->" | safeHTML }}
 			<article class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-duration="500ms">
-				<a href="/{{ .urlslug }}">
+				<!--a href="/{{ .urlslug }}"-->
 					<div class="service-block text-center">
 						<div class="service-icon text-center">
 							<i class="{{ .icon }}"></i>
@@ -27,7 +27,7 @@
 						<h3>{{ .name | markdownify }}</h3>
 						<p>{{ .content | markdownify }}</p>
 					</div>
-				</a>
+				<!--/a-->
 			</article>
 			{{"<!-- End Single Service Item -->" | safeHTML }}
 			{{ end }}
