--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -14,7 +14,7 @@ html {
 
 body {
   background-color: #3c3836;
-  font-family: "Anaheim", sans-serif;
+  font-family: "Titillium Web", sans-serif;
   color: #737f8a;
   -webkit-font-smoothing: antialiased;
 }
@@ -26,12 +26,12 @@ h4,
 h5,
 h6 {
   font-weight: 400;
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Titillium Web", sans-serif;
   color: #afbac4;
 }
 
 p {
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Titillium Web", sans-serif;
 }
 
 [scroll-behavior=smooth] {
@@ -348,7 +348,7 @@ a:hover {
 .header-bradcrumb .active {
   color: #cfcfcf;
   font-weight: 200;
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Titillium Web", sans-serif;
 }
 
 .header-bradcrumb a:hover {
